# langchain

./: app.py  cli.py  multiple_node_communication.py  pyproject.toml  run command for project.txt
supervisor/: main.py
supervisor_with_voice/: app.py  doctor_timeslot.py  lab_details.py  patient_details.py
supervisor_with_voice/static/: script.js  style.css
supervisor_with_voice/templates/: index.html
